--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,163 @@
 body {
     text-align: center;
-    background-color: #011F3F;
+    background-color: #393E46;
     position: relative;
     display: grid;
     align-items: center;
     justify-content: center;
 }
 
+.base-container {
+    font-family: 'Press Start 2P', cursive;
+    color: #EEEEEE;
+    width: 700px;
+    height: 500px;
+    background-color: #00ADB5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 30px;
+}
+
 .header {
     font-family: 'Press Start 2P', cursive;
     font-size: 2rem;
     margin: 5%;
-    color: #FEF2BF;
+    color: #EEEEEE;
 }
 
-.select-form {
-    font-family: 'Press Start 2P', cursive;
-    border-radius: 10px;
-    background-color: #FEF2BF;
-    width: 40vh;
-    height: 45vh;
-}
 
-.label {
-    display: inline-block;
-    font-weight: bold;
-}
+
 
 .form-control {
     font-family: 'Press Start 2P', cursive;
     display: block;
-    margin-left: 10%;
-    width: 80%;
-    height: 30px;
+    width: 100%;
+    height: 35px;
+    background-color: #EEEEEE;
+    border: none;
 }
 
 .btn {
+    width: 65%;
+    height: 40px;
+    border-radius: 10px;
+    background: none;
     font-family: 'Press Start 2P', cursive;
-    font-size: 1rem;
-    margin-top: 30px;
-    width: 70%;
-    height: 50px;
+    color: #EEEEEE;
+    font-weight: 600;
+    border: 2px solid #EEEEEE;
+    cursor: pointer;
+    outline: none;
+}
+
+.btn:hover {
+    background-color: #EEEEEE;
+    color: black;
+}
+
+.count-down {
+    margin-top: 50px;
+    color: #EEEEEE;
+    font-size: 40px;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.quiz-container {
+
+    display: none;
+    width: 100%;
+    
+}
+
+.game-details {
+    margin-left: 50px;
+    width: 80%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.question-container{
+    width: 80%;
+    margin-left: 70px;
+    margin-bottom: 40px;
+    height: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #EEEEEE;
+    border-radius: 25px;
+
+}
+
+
+
+.options-button {
+    width: 45%;
+    height: 30px;
+    margin: 10px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 20px;
+    background: none;
+    border: none;
+    color: #EEEEEE;
+
+}
+
+.next-button-container{
+    margin-left: 180px;
+    margin-top: 70px;
+    width: 50%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+}
+
+#next-question-btn:hover{
+    background-color: #EEEEEE;
+    color: black;
+}
+.next-button-container button{
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    font-family: 'Press Start 2P', cursive;
+    color: #EEEEEE;
+    font-weight: 600;
+    border: 2px solid #EEEEEE;
+    cursor: pointer;
+    outline: none;
+}
+
+.options-container button:focus {
+    color: #393E46;
+}
+
+.game-finished-container {
+    display: none;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 50px
+}
+
+#reset-game-btn {
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    font-family: 'Press Start 2P', cursive;
+    color: #EEEEEE;
+    font-weight: 600;
+    border: 2px solid #EEEEEE;
+    cursor: pointer;
+    outline: none;
+}
+
+#reset-game-btn:hover {
+    background-color: #EEEEEE;
+    color: black;
 }
