--- a/styles.css
+++ b/styles.css
@@ -1,163 +1,171 @@
+:root {
+  --text-color: #feffff;
+  --font-family: "Press Start 2P", cursive;
+}
+
 body {
-    text-align: center;
-    background-color: #393E46;
-    position: relative;
-    display: grid;
-    align-items: center;
-    justify-content: center;
+  font-family: var(--font-family);
+  text-align: center;
+  background-color: #393e46;
+  position: relative;
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 .base-container {
-    font-family: 'Press Start 2P', cursive;
-    color: #EEEEEE;
-    width: 700px;
-    height: 500px;
-    background-color: #00ADB5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 700px;
+  height: 500px;
+
+  justify-content: space-around;
+
+  color: var(--text-color);
+  background-color: #00adb5;
+  border-radius: 30px;
 }
 
 .header {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 2rem;
-    margin: 5%;
-    color: #EEEEEE;
+  font-family: var(--font-family);
+  font-size: 2rem;
+  margin: 5%;
+  color: var(--text-color);
 }
 
-
-
-
 .form-control {
-    font-family: 'Press Start 2P', cursive;
-    display: block;
-    width: 100%;
-    height: 35px;
-    background-color: #EEEEEE;
-    border: none;
+  font-family: var(--font-family);
+  display: block;
+  width: 100%;
+  height: 35px;
+  background-color: var(--text-color);
+  border: none;
 }
 
 .btn {
-    width: 65%;
-    height: 40px;
-    border-radius: 10px;
-    background: none;
-    font-family: 'Press Start 2P', cursive;
-    color: #EEEEEE;
-    font-weight: 600;
-    border: 2px solid #EEEEEE;
-    cursor: pointer;
-    outline: none;
+  width: 65%;
+  height: 40px;
+  border-radius: 10px;
+  background: none;
+  font-family: var(--font-family);
+  color: var(--text-color);
+  font-weight: 600;
+  border: 2px solid var(--text-color);
+  cursor: pointer;
+  outline: none;
 }
 
 .btn:hover {
-    background-color: #EEEEEE;
-    color: black;
+  background-color: var(--text-color);
+  color: black;
 }
 
 .count-down {
-    margin-top: 50px;
-    color: #EEEEEE;
-    font-size: 40px;
-    font-family: 'Press Start 2P', cursive;
+  margin-top: 50px;
+  color: var(--text-color);
+  font-size: 40px;
+  font-family: var(--font-family);
 }
 
 .quiz-container {
-
-    display: none;
-    width: 100%;
-    
+  display: none;
+  width: 100%;
 }
 
 .game-details {
-    margin-left: 50px;
-    width: 80%;
-    height: 4rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  margin-left: 50px;
+  width: 80%;
+  height: 4rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
+.question-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.question-container{
-    width: 80%;
-    margin-left: 70px;
-    margin-bottom: 40px;
-    height: 8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid #EEEEEE;
-    border-radius: 25px;
+  width: 80%;
+  margin-left: 70px;
+  margin-bottom: 40px;
+  height: 8rem;
 
+  border: 2px solid var(--text-color);
+  border-radius: 25px;
 }
-
-
 
 .options-button {
-    width: 45%;
-    height: 30px;
-    margin: 10px;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 20px;
-    background: none;
-    border: none;
-    color: #EEEEEE;
+  width: 45%;
+  height: 30px;
 
+  margin: 10px;
+
+  font-family: var(--font-family);
+  font-size: 20px;
+
+  background: none;
+  border: none;
+  color: var(--text-color);
 }
 
-.next-button-container{
-    margin-left: 180px;
-    margin-top: 70px;
-    width: 50%;
-    height: 3rem;
-    display: flex;
-    justify-content: center;
+.next-button-container {
+  display: flex;
+  justify-content: center;
+
+  margin-left: 180px;
+  margin-top: 70px;
+
+  width: 50%;
+  height: 3rem;
 }
 
-#next-question-btn:hover{
-    background-color: #EEEEEE;
-    color: black;
+#next-question-btn:hover {
+  background-color: var(--text-color);
+  color: black;
 }
-.next-button-container button{
-    width: 8rem;
-    height: 2rem;
-    border-radius: 10px;
-    background: none;
-    font-family: 'Press Start 2P', cursive;
-    color: #EEEEEE;
-    font-weight: 600;
-    border: 2px solid #EEEEEE;
-    cursor: pointer;
-    outline: none;
+.next-button-container button {
+  width: 8rem;
+  height: 2rem;
+
+  border-radius: 10px;
+  background: none;
+  font-family: var(--font-family);
+
+  color: var(--text-color);
+  font-weight: 600;
+  border: 2px solid var(--text-color);
+
+  outline: none;
 }
 
 .options-container button:focus {
-    color: #393E46;
+  color: #393e46;
+  cursor: pointer;
 }
 
 .game-finished-container {
-    display: none;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 50px
+  display: none;
+  font-family: var(--font-family);
+  font-size: 50px;
 }
 
 #reset-game-btn {
-    width: 8rem;
-    height: 2rem;
-    border-radius: 10px;
-    background: none;
-    font-family: 'Press Start 2P', cursive;
-    color: #EEEEEE;
-    font-weight: 600;
-    border: 2px solid #EEEEEE;
-    cursor: pointer;
-    outline: none;
+  width: 8rem;
+  height: 2rem;
+  border-radius: 10px;
+  background: none;
+  font-family: var(--font-family);
+  color: var(--text-color);
+  font-weight: 600;
+  border: 2px solid var(--text-color);
+  cursor: pointer;
+  outline: none;
 }
 
 #reset-game-btn:hover {
-    background-color: #EEEEEE;
-    color: black;
+  background-color: var(--text-color);
+  color: black;
 }
